# libaa

./: .gitattributes  .gitmodules  .travis.yml  CMakeLists.txt  README.md  run_example.sh
.github/workflows/: build.yml  cmake.yml
example/: CMakeLists.txt  audio_effect.cpp  features.cpp  load_file.cpp  stft.cpp
examples/: CMakeLists.txt  audio_effect.cpp  audio_writer.cpp  features.cpp  load_file.cpp  play_sound.cpp  signal_generator.cpp  stft.cpp
include/: aa_audio_decoder.h  aa_audio_file.cpp  aa_audio_file.h  aa_distance.h  aa_fft.h  aa_options.h  aa_stft.h  aa_wav_decoder.h  aa_window.h
include/audio_basics/: aa_audio_buffer.h  aa_delay_line.h  aa_delay_line_array.h
include/audio_effect/: aa_audio_effect_processor.h  aa_biquad_filter.h  aa_biquad_impl.cpp  aa_chorus.h  aa_compressor.h  aa_delay_effect.h  aa_delay_line.h  aa_distortion.h  aa_flanger.h  aa_iir_filter.h  aa_robot.h  aa_tremolo.h  aa_vibrato_effect.h
include/audio_generator/: aa_lfo_generator.h
include/dsp/: aa_dsp_utilities.h  aa_fft.h  aa_lfo.h  aa_window.h
include/fileio/: aa_audio_file.h  aa_audio_format_reader.h  aa_wav_decoder.h
include/libaa/: aa_common.h
include/libaa/audio_basics/: aa_audio_buffer.h  aa_delay_line_array.h
include/libaa/audio_effect/: aa_audio_effect_processor.h  aa_biquad_filter.h  aa_biquad_impl.h  aa_compressor.h  aa_delay_effect.h  aa_distortion.h  aa_flanger.h  aa_iir_filter.h  aa_robot.h  aa_tremolo.h  aa_vibrato_effect.h
include/libaa/audio_generator/: aa_audio_signal_genrator.h  aa_lfo_generator.h
include/libaa/core/: aa_audio_processor_parameter_float.h
include/libaa/dsp/: aa_dtw.h  aa_fft.h  aa_lfo.h  aa_mfcc.h  aa_options.h  aa_window.h  aa_yin.h
include/libaa/fileio/: aa_aac_audio_format_reader.h  aa_audio_decoder.h  aa_audio_decoder_factory.h  aa_audio_format_reader.h  aa_audio_format_writer.h  aa_file_input_stream.h  aa_file_output_stream.h  aa_file_stream.h  aa_input_stream.h  aa_mp3_audio_format_reader.h  aa_mp3_audio_format_writer.h  aa_out_file_stream.h  aa_output_stream.h  aa_wav_audio_format_reader.h  aa_wav_audio_format_writer.h
res/sound/: sample1.aac
src/: CMakeLists.txt  aa_audio_file.cpp  aa_wav_decoder.cpp
src/audio_effect/: CMakeLists.txt  aa_audio_effect_processor.cpp  aa_biquad_filter.cpp  aa_chorus.cpp  aa_compressor.cpp  aa_delay_effect.cpp  aa_delay_effect.h  aa_distortion.cpp  aa_flanger.cpp  aa_iir_filter.cpp  aa_robot.cpp  aa_tremolo.cpp  aa_vibrato_effect.cpp
src/audio_generator/: aa_lfo_generator.cpp
src/core/: CMakeLists.txt  aa_audio_processor_parameter_float.cpp
src/dsp/: CMakeLists.txt  aa_distance.cpp  aa_dsp_help_func.h  aa_dsp_utilities.cpp  aa_dtw.cpp  aa_fft.cpp  aa_lfo.cpp  aa_mfcc.cpp  aa_stft.cpp  aa_window.cpp  aa_yin.cpp  aa_yin.h
src/fileio/: CMakeLists.txt  aa_aac_audio_format_reader.cpp  aa_audio_decoder_factory.h  aa_audio_file.cpp  aa_audio_format_reader.cpp  aa_file_input_stream.cpp  aa_file_output_stream.cpp  aa_file_stream.cpp  aa_mp3_audio_format_reader.cpp  aa_mp3_audio_format_writer.cpp  aa_out_file_stream.cpp  aa_wav_audio_format_reader.cpp  aa_wav_audio_format_writer.cpp  aa_wav_decoder.cpp  aa_wave_audio_format_reader.cpp
test/: CMakeLists.txt  test_audio_file.cpp  test_delay_line.cpp  test_dtw.cpp  test_features.cpp  test_fft.cpp  test_stft.cpp  test_window.cpp  test_yin.cpp
tests/: CMakeLists.txt  aa_scope_wave_file.cpp  aa_test_helper.h  test_IIR_filters_coeffs.cpp  test_aac_audio_format_reader.cpp  test_audio_buffer.cpp  test_audio_effect.cpp  test_audio_file.cpp  test_audio_format.cpp  test_delay_line.cpp  test_delay_line_array.cpp  test_dsp_main.cpp  test_dtw.cpp  test_features.cpp  test_fft.cpp  test_file_stream.cpp  test_lfo.cpp  test_lfo_generator.cpp  test_mp3_audio_format_reader.cpp  test_out_file_stream.cpp  test_wav_audio_format_reader.cpp  test_wav_audio_format_writer.cpp  test_window.cpp  test_yin.cpp
tests/core/: CMakeLists.txt  test_audio_buffer.cpp  test_audio_processor_parameter_float.cpp
tests/dsp/: CMakeLists.txt  test_IIR_filters_coeffs.cpp  test_delay_line.cpp  test_delay_line_array.cpp  test_dtw.cpp  test_features.cpp  test_fft.cpp
tests/fileio/: CMakeLists.txt  test_aac_audio_format_reader.cpp  test_audio_file.cpp  test_file_stream.cpp  test_mp3_audio_format_reader.cpp  test_mp3_audio_format_writer.cpp  test_out_file_stream.cpp  test_wav_audio_format_reader.cpp  test_wav_audio_format_writer.cpp
tests/processor/: CMakeLists.txt  test_audio_effect.cpp
